src/com/example/dip/bad/NotifierEmail.java
package com.example.dip.bad;

public class NotifierEmail {

    public String notifyEmail() {
        return "OK";
    }

}
